Fixed some spacing issues and figured out why font-weight wasn't working (I was using a font that only supported 400 and 700.) Added photo credits to the page itself. The last step will be fixing the flexbox for the infographic section.

--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
+*, ::before, ::after {
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+  }
+
 body {
     display: flex;
     flex-flow: column nowrap;
     justify-content: stretch;
     align-items: stretch;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Open Sans, Helvetica, sans-serif;
     margin: 0px;
     height: 100vh;
 }
@@ -79,7 +85,7 @@ body {
 
 .info-header {
     font-size: 36px;
-    font-weight: 800px;
+    font-weight: 800;
     color: #1F2937;
     padding-top: 50px;
     padding-bottom: 50px;
@@ -95,20 +101,44 @@ body {
 .infographic {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     margin-bottom: 50px;
+    border: 2px solid red;
 }
 
 .graphic {
     display: flex;
     flex-direction: column;
+    border: 2px solid blue;
+}
+
+.infotext {
+    display: flex;
+    flex-flow: row wrap;
 }
 
 .quote {
     background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    padding-left: 20%;
+    padding-right: 20%;
+}
+
+.content {
     font-size: 36px;
     font-weight: 300;
     font-style: italic;
     color: #1F2937;
+}
+
+.author {
+    padding-top: 10px;
+    font-size: 20px;
+    font-weight: 600;
+    align-self: flex-end;
 }
 
 .signup {
@@ -121,17 +151,23 @@ body {
 
 }
 
-.call {
+.signuptext {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    border: 2px solid red;
     margin: 0px;
 }
 
-p {
-    border: 2px solid red;
+.call {
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 5px;
+}
+
+.signup {
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 .signup button {
@@ -140,10 +176,19 @@ p {
 
 .footer {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 40px;
+}
+
+.credit {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    padding: 10px;
 }
 
 ul {
@@ -161,6 +206,10 @@ button, .signup {
     padding: 8px;
     padding-left: 20px;
     padding-right: 20px;
+    
+}
+
+button {
     margin-top: 10px;
     margin-bottom: 10px;
 }
